# ==============================================================================
# Nemesis CMake File
# ==============================================================================

# program interfaces -----------------------------
# amber related tools and projects
ADD_SUBDIRECTORY(Amber)
# gaussian export/import
ADD_SUBDIRECTORY(Gaussian)
# turbomole export/import
ADD_SUBDIRECTORY(Turbomole)
# cpmd export/import
ADD_SUBDIRECTORY(CPMD)
