# ==============================================================================
# Nemesis CMake File
# ==============================================================================

# program interfaces -----------------------------
ADD_SUBDIRECTORY(OpenBabel)
ADD_SUBDIRECTORY(Amber)
ADD_SUBDIRECTORY(Gaussian)
ADD_SUBDIRECTORY(Turbomole)
ADD_SUBDIRECTORY(CPMD)

