# ==============================================================================
# Nemesis CMake File
# ==============================================================================

# dedicated projects -----------------------------
ADD_SUBDIRECTORY(BuildProject)
#ADD_SUBDIRECTORY(SketchProject)
ADD_SUBDIRECTORY(TrajectoryProject)

