# ==============================================================================
# Nemesis CMake File
# ==============================================================================

# work panels ------------------------------------
ADD_SUBDIRECTORY(AdminWP)
ADD_SUBDIRECTORY(StandardWP)
ADD_SUBDIRECTORY(ExtraWP)
ADD_SUBDIRECTORY(SymmetryWP)

